[package]
name = "toda"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
nix = "0.18"
anyhow = "1.0"
fuse = "0.3"
time = "0.1"
signal-hook = "0.1"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
async-trait = "0.1"
tracing-futures = "0.2"
tokio = {version = "0.2", features = ["rt-core", "rt-threaded", "sync", "fs", "time", "blocking"]}
thiserror = "1.0"
futures = "0.3"
derive_more = "0.99.9"
glob = "0.3"
bitflags = "1.2"
rand = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
humantime-serde = "1.0"
slab = "0.4"
once_cell = "1.4"

[profile.release]
debug = true